<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="agendar">Agendar Cita</string>
    <string name="Registrarse">Registrarse</string>
    <string name="iniciar">Inicio Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="documento">Documento</string>
    <string name="correo">Correo</string>
    <string name="placa">Placa</string>
    <string name="servicio">Servicio</string>
    <string name="cita">Cita</string>
    <string name="fecha">Fecha</string>
    <string name="telefono">Telefono</string>
    <string name="hora">Hora</string>
    <string name="inicio">Inicio</string>
    <string name="cerrar">Cerrar Sesion</string>
    <string name="salir">¿Desea cerrar sesion?</string>
    <string name="cancelar">Cancelar</string>
</resources>