<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bordes">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp">

        </TextView>

        <EditText
            android:id="@+id/Cusuario"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/nombre"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documento"
            android:textSize="30dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/Cdocumento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/documento"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placa"
            android:textSize="30dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/Cplaca"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/placa"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:id="@+id/textfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="30dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/fecha"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textSize="30dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/Thora"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hora"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>

        <Button
            android:id="@+id/Bhora"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="seleccionar hora"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:background="@drawable/edits"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            >

        </Button>


    </LinearLayout>

    <Button
        android:id="@+id/agendar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/agendar"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        >

    </Button>

    <Button
        android:id="@+id/volver"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:text="@string/inicio"
        android:textSize="15dp">

    </Button>

</LinearLayout>