<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/salir"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginBottom="10dp">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:background="@drawable/edits"
                android:layout_margin="10dp"
                android:textColor="@color/black">

            </Button>

            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:background="@drawable/edits"
                android:layout_margin="10dp"
                android:textColor="@color/black">

            </Button>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>