<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bordes"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/Rusuario"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/usuario"
            android:background="@drawable/edits"
            android:textColor="@color/black"
            >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/Rcontraseña"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/contraseña"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/Rcorreo"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/correo"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/Rtelefono"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/telefono"
            android:background="@drawable/edits"
            android:textColor="@color/black">

        </EditText>



        <Button
            android:id="@+id/Registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            >

        </Button>

    </LinearLayout>

</LinearLayout>