<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:background="@drawable/bordes"
        android:gravity="center">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="100dp"
            android:layout_height="1000dp"
            android:src="@drawable/usu"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/correo"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/correo"
            android:background="@drawable/edits"
            android:textColor="@color/black"
            >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
           >

        </TextView>

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/contraseña"
            android:background="@drawable/edits"
            android:textColor="@color/black"
            >

        </EditText>

        <Button
            android:id="@+id/Blogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar"
            android:textColor="@color/black"
            android:backgroundTint="@color/celeste">

        </Button>

        <Button
            android:id="@+id/Bregistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:textColor="@color/black"
            android:background="@drawable/button"
            >

        </Button>


    </LinearLayout>

</LinearLayout>