<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tvServicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicio"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvdocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvplaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>
</LinearLayout>
